Update 2D Barnsley's Fern comparison.ipynb

--- a/2D Barnsley's Fern comparison.ipynb
+++ b/2D Barnsley's Fern comparison.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Barnsley's Fern in 2D\n",
     "____\n",
-    "### Physics 6810 Final Project $\\cdot$ Jessica Kulp $\\cdot$ ``kulp.95@osu.edu`` $\\cdot$ SP21"
+    "### Jessica Kulp $\\cdot$ ``kulp.95@osu.edu`` $\\cdot$ SP21"
    ]
   },
   {
